--- a/index.html
+++ b/index.html
@@ -1,31 +1,26 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portafolio profesional</title>
+    <link rel ="stylesheet" href="style.css">
+
 </head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0" >
-<link rel="preconnect" href="https://fonts.googlepis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googlepis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-<title>Login Cajero</title>
-<link rel="stylesheet" href="style.css" >
-
 <body>
-    <div class="container">
-        <h2>Cajero Automatico </h2>
-        <input type="text" id="user" placeholder="Usuario"> <br>
-        <input type="password" id="pin" placeholder="PIN" > <br>
-        <button onclick="registrar()">Registrar</button>
-        <button onclick="login()">Ingresar</button>
-        <p id="message"></p>
-    </div>
-    <script src="funciones.js"></script>
-</body>
-    <footer>
-        <p> © 2024 cajero Automatico. todos los derechos reservados </p>
-    </footer>
+    <header>
+        <nav>
+            <ul>
+                <il> <a href="#inicio">Inicio </a></il>
+                <il> <a href="#habilidades">Habilidades </a></il>
+                <il> <a href="#proyecto">Proyecto </a></il>
+                <il> <a href="#testimonios">Testimonios </a></il>
+                <il> <a href="#contacto">Contacto </a></il>
+                
 
+
+            </ul>
+        </nav>
+    </header>
+</body>
 </html>
